Added some more logging details.
Set logging mode to TRACE to see deep logging.

--- a/axelor-data/src/test/resources/log4j.properties
+++ b/axelor-data/src/test/resources/log4j.properties
@@ -25,7 +25,7 @@ log4j.appender.DebugFile.layout.ConversionPattern=%p %t %c - %m%n
 # Axelor logging
 
 # Log everything
-log4j.logger.com.axelor=DEBUG
+log4j.logger.com.axelor=TRACE
 
 # Hibernate logging
 
