--- a/axelor-tools/src/main/resources/templates/groovy/body.template
+++ b/axelor-tools/src/main/resources/templates/groovy/body.template
@@ -11,7 +11,7 @@ class ${pojo.name} extends ${pojo.baseClass} {
 <% } %>\
 <% pojo.fields.each { p -> %>\
 ${p.documentation}
-<% if (! p.code.empty) { %>\
+<% if (p.isVirtual() && !p.isFormula()) { %>\
 	$p.type ${p.getter}() {
 		try {
 			$p.name = compute${p.firstUpper(p.name)}()
