--- a/axelor-tools/pom.xml
+++ b/axelor-tools/pom.xml
@@ -12,4 +12,11 @@
   <artifactId>axelor-tools</artifactId>
   <name>Axelor :: Tools</name>
   
+  <dependencies>
+    <!-- Use Inflector from Jersey -->
+    <dependency>
+      <groupId>com.sun.jersey</groupId>
+      <artifactId>jersey-server</artifactId>
+    </dependency>
+  </dependencies>
 </project>
