--- a/axelor-wkf/pom.xml
+++ b/axelor-wkf/pom.xml
@@ -1,32 +1,33 @@
-<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
-  
-  <parent>
-    <groupId>com.axelor</groupId>
-    <artifactId>axelor-module-parent</artifactId>
-    <version>0.0.8-SNAPSHOT</version>
-    <relativePath>../axelor-module-parent/pom.xml</relativePath>
-  </parent>
-  
-  <modelVersion>4.0.0</modelVersion>
-  <artifactId>axelor-wkf</artifactId>
-  <packaging>jar</packaging>
-  
-  <name>Axelor :: Wkf</name>
+<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
+	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
 
-  <dependencies>
-  
-    <dependency>
-      <groupId>com.axelor</groupId>
-      <artifactId>axelor-meta</artifactId>
-      <version>${project.version}</version>
-    </dependency>
-    
-    <dependency>
-      <groupId>com.axelor</groupId>
-      <artifactId>axelor-auth</artifactId>
-      <version>${project.version}</version>
-    </dependency>
-    
-  </dependencies>
-  
+	<parent>
+		<groupId>com.axelor</groupId>
+		<artifactId>axelor-module-parent</artifactId>
+		<version>0.0.8-SNAPSHOT</version>
+		<relativePath>../axelor-module-parent/pom.xml</relativePath>
+	</parent>
+
+	<modelVersion>4.0.0</modelVersion>
+	<artifactId>axelor-wkf</artifactId>
+	<packaging>jar</packaging>
+
+	<name>Axelor :: Wkf</name>
+
+	<dependencies>
+
+		<dependency>
+			<groupId>com.axelor</groupId>
+			<artifactId>axelor-meta</artifactId>
+			<version>${project.version}</version>
+		</dependency>
+
+		<dependency>
+			<groupId>com.axelor</groupId>
+			<artifactId>axelor-auth</artifactId>
+			<version>${project.version}</version>
+		</dependency>
+
+	</dependencies>
+
 </project>
