Implemented user security check.
- only show toolbar buttons for authorized actions
- check for instance level permission on m2o/o2m/m2m

--- a/axelor-web/pom.xml
+++ b/axelor-web/pom.xml
@@ -16,6 +16,11 @@
 
   <dependencies>
     <!-- module specific dependencies -->
+    <dependency>
+      <groupId>com.axelor</groupId>
+      <artifactId>axelor-auth</artifactId>
+      <version>${project.version}</version>
+    </dependency>
   </dependencies>
 
   <build>
