--- a/axelor-core/pom.xml
+++ b/axelor-core/pom.xml
@@ -80,6 +80,10 @@
       <artifactId>hibernate-ehcache</artifactId>
     </dependency>
     <dependency>
+      <groupId>net.sf.ehcache</groupId>
+      <artifactId>ehcache</artifactId>
+    </dependency>
+    <dependency>
       <groupId>org.hibernate</groupId>
       <artifactId>hibernate-validator</artifactId>
     </dependency>
