Fixed batch issue for csv data import.

--- a/axelor-data/src/test/resources/log4j.properties
+++ b/axelor-data/src/test/resources/log4j.properties
@@ -33,7 +33,8 @@ log4j.logger.com.axelor=TRACE
 #log4j.logger.org.hibernate=INFO
 
 # Log all SQL DML statements as they are executed
-#log4j.logger.org.hibernate.SQL=INFO
+log4j.logger.org.hibernate.SQL=DEBUG
+log4j.logger.org.hibernate.engine.jdbc=DEBUG
 
 # Log all SQL DDL statements as they are executed
 #log4j.logger.org.hibernate.tool.hbm2ddl=INFO
