--- a/axelor-data/pom.xml
+++ b/axelor-data/pom.xml
@@ -26,6 +26,11 @@
       <artifactId>jcommander</artifactId>
       <version>1.26</version>
     </dependency>
+    <dependency>
+       <groupId>commons-jxpath</groupId>
+       <artifactId>commons-jxpath</artifactId>
+       <version>1.3</version>
+	</dependency>
 
 	<!-- test dependencies -->
 	<dependency>
