--- a/axelor-tools/src/main/resources/templates/body.template
+++ b/axelor-tools/src/main/resources/templates/body.template
@@ -112,36 +112,92 @@ ${p.documentation}
 	public String toString() {
 		${pojo.toStringCode}
 	}
+<% pojo.finderMethods.each { %>\
+	${it.code}\
+<% } %>\
 
+	/**
+	 * Make the entity managed and persistent.
+	 * 
+	 * @see EntityManager#persist(Object)
+	 */
 	public $pojo.name persist() {
 		return JPA.persist(this);
 	}
-	
+
+	/**
+	 * Merge the state of the entity into the current persistence context.
+	 * 
+	 * @see EntityManager#merge(Object)
+	 */
 	public $pojo.name merge() {
 		return JPA.merge(this);
 	}
-	
+
+	/**
+	 * Save the state of the entity.<br>
+	 * <br>
+	 * It uses either {@link #persist()} or {@link #merge()} and calls
+	 * {@link #flush()} to synchronize values with database.
+	 * 
+	 * @see #persist(Model)
+	 * @see #merge(Model)
+	 * 
+	 */
 	public $pojo.name save() {
 		return JPA.save(this);
 	}
 	
+	/**
+	 * Remove the entity instance.
+	 * 
+	 * @see EntityManager#remove(Object)
+	 */
 	public void remove() {
 		JPA.remove(this);
 	}
 	
+	/**
+	 * Refresh the state of the instance from the database, overwriting changes
+	 * made to the entity, if any.
+	 * 
+	 * @see EntityManager#refresh(Object)
+	 */
 	public void refresh() {
 		JPA.refresh(this);
 	}
 	
+	/**
+	 * Synchronize the persistence context to the underlying database.
+	 * 
+	 * @see EntityManager#flush()
+	 */
 	public void flush() {
 		JPA.flush();
 	}
 	
+	/**
+	 * Find a <code>$pojo.name</code> by <code>id</code>.
+	 *
+	 */
 	public static $pojo.name find(Long id) {
 		return JPA.find(${pojo.name}.class, id);
 	}
 	
+	/**
+	 * Return a {@link Query} instance for <code>$pojo.name</code> to filter
+	 * on all the records.
+	 *
+	 */
 	public static Query<$pojo.name> all() {
 		return JPA.all(${pojo.name}.class);
+	}
+	
+	/**
+	 * A shortcut method to <code>${pojo.name}.all().filter(...)</code>
+	 *
+	 */
+	public static Query<$pojo.name> filter(String filter, Object... params) {
+		return JPA.all(${pojo.name}.class).filter(filter, params);
 	}
 }
