Implement signavio interface.

--- a/axelor-wkf/src/main/resources/wkf.properties
+++ b/axelor-wkf/src/main/resources/wkf.properties
@@ -1,1 +1,6 @@
-wkf.oryx.url=http://188.165.204.152:8080/oryx/editor;bpmn2.0#
+# Application URL
+application.url=http://localhost:8080/axelor-demo
+# Signavio URL
+wkf.editor.url=http://localhost:8080/signaviocore
+# Language code supported : 'fr', 'en_US', 'de'
+wkf.editor.lang=fr
