--- a/axelor-tools/src/main/resources/templates/body.template
+++ b/axelor-tools/src/main/resources/templates/body.template
@@ -2,6 +2,7 @@ ${ pojo.documentation }\
 <% pojo.annotations.each { a -> %>
 ${a}\
 <% } %>
+${ pojo.indexes }\
 public class ${pojo.name} extends ${pojo.baseClass} {
 <% pojo.fields.each { p -> %>\
 <% p.annotations.each { a -> %>
