--- a/axelor-web/src/main/webapp/WEB-INF/web.xml
+++ b/axelor-web/src/main/webapp/WEB-INF/web.xml
@@ -24,6 +24,11 @@
       <trim-directive-whitespaces>true</trim-directive-whitespaces>
     </jsp-property-group>
   </jsp-config>
+  
+  <mime-mapping>
+    <extension>woff</extension>
+    <mime-type>application/font-woff</mime-type>
+  </mime-mapping>
 
   <!-- welcome page -->
   <welcome-file-list>
