Upgraded to servlet api 3.0.1

--- a/axelor-auth/pom.xml
+++ b/axelor-auth/pom.xml
@@ -19,7 +19,7 @@
     <!-- Servlet API -->
      <dependency>
       <groupId>javax.servlet</groupId>
-      <artifactId>servlet-api</artifactId>
+      <artifactId>javax.servlet-api</artifactId>
     </dependency>
     
     <!-- Apache Shiro -->
