--- a/axelor-web/src/main/webapp/WEB-INF/web.xml
+++ b/axelor-web/src/main/webapp/WEB-INF/web.xml
@@ -19,9 +19,16 @@
     <listener-class>com.axelor.web.AppContextListener</listener-class>
   </listener>
 
+  <!-- prevent session id in url (tomcat) -->
   <session-config>
     <tracking-mode>COOKIE</tracking-mode>
   </session-config>
+
+  <!-- prevent session id in url (jetty) -->
+  <context-param>
+    <param-name>org.eclipse.jetty.servlet.SessionIdPathParameterName</param-name>
+    <param-value>none</param-value>
+  </context-param>
 
   <jsp-config>
     <jsp-property-group>
