Update default wkf editor url in properties.

--- a/axelor-wkf/src/main/resources/wkf.properties
+++ b/axelor-wkf/src/main/resources/wkf.properties
@@ -1,6 +1,6 @@
 # Application URL
 application.url=http://localhost:8080/axelor-demo
 # Signavio URL
-wkf.editor.url=http://localhost:8080/signaviocore
+wkf.editor.url=http://localhost:8080/axelorbpm
 # Language code supported : 'fr', 'en_US', 'de'
 wkf.editor.lang=fr
