--- a/axelor-meta/pom.xml
+++ b/axelor-meta/pom.xml
@@ -26,6 +26,10 @@
       <version>${project.version}</version>
     </dependency>
     <dependency>
+      <groupId>com.axelor</groupId>
+      <artifactId>axelor-cglib</artifactId>
+    </dependency>
+    <dependency>
       <groupId>com.github.groovy-wslite</groupId>
       <artifactId>groovy-wslite</artifactId>
       <version>0.7.1</version>
