--- a/axelor-core/pom.xml
+++ b/axelor-core/pom.xml
@@ -91,6 +91,10 @@
       <groupId>javax.validation</groupId>
       <artifactId>validation-api</artifactId>
     </dependency>
+    <dependency>
+      <groupId>org.hibernate</groupId>
+      <artifactId>hibernate-c3p0</artifactId>
+    </dependency>
 
     <!-- Refleactions -->
     <dependency>
