--- a/axelor-tools/pom.xml
+++ b/axelor-tools/pom.xml
@@ -18,5 +18,12 @@
       <groupId>com.sun.jersey</groupId>
       <artifactId>jersey-server</artifactId>
     </dependency>
+    <!-- command line parser -->
+    <dependency>
+      <groupId>io.airlift</groupId>
+      <artifactId>airline</artifactId>
+      <version>0.6</version>
+    </dependency>
   </dependencies>
+
 </project>
