--- a/axelor-test/pom.xml
+++ b/axelor-test/pom.xml
@@ -49,6 +49,16 @@
       <artifactId>validation-api</artifactId>
       <scope>test</scope>
     </dependency>
+    
+    <!-- Unified EL -->
+    <dependency>
+      <groupId>javax.el</groupId>
+      <artifactId>javax.el-api</artifactId>
+    </dependency>
+    <dependency>
+      <groupId>org.glassfish</groupId>
+      <artifactId>javax.el</artifactId>
+    </dependency>
 
     <!-- Jersey -->
     <dependency>
