Fixed module pom.xml

--- a/axelor-core/pom.xml
+++ b/axelor-core/pom.xml
@@ -5,7 +5,7 @@
     <groupId>com.axelor</groupId>
     <artifactId>axelor-parent</artifactId>
     <version>0.9.0-SNAPSHOT</version>
-    <relativePath>../axelor-parent/pom.xml</relativePath>
+    <relativePath>../../axelor-maven/axelor-parent/pom.xml</relativePath>
   </parent>
 
   <modelVersion>4.0.0</modelVersion>
@@ -125,8 +125,8 @@
 
     <!-- Jackson-->
     <dependency>
-     <groupId>com.fasterxml.jackson.jaxrs</groupId>
-        <artifactId>jackson-jaxrs-json-provider</artifactId>
+      <groupId>com.fasterxml.jackson.jaxrs</groupId>
+      <artifactId>jackson-jaxrs-json-provider</artifactId>
     </dependency>
 
   </dependencies>
