--- a/axelor-auth/pom.xml
+++ b/axelor-auth/pom.xml
@@ -5,27 +5,27 @@
     <groupId>com.axelor</groupId>
     <artifactId>axelor-base-parent</artifactId>
     <version>0.9.0-SNAPSHOT</version>
-    <relativePath>../axelor-base-parent/pom.xml</relativePath>
+    <relativePath>../../axelor-maven/axelor-base-parent/pom.xml</relativePath>
   </parent>
 
   <modelVersion>4.0.0</modelVersion>
-  
+
   <artifactId>axelor-auth</artifactId>
   <name>Axelor :: Auth</name>
-  
+
   <properties>
     <apache.ds.version>2.0.0-M15</apache.ds.version>
   </properties>
 
   <!-- module specific dependencies -->
   <dependencies>
-    
+
     <!-- Servlet API -->
-     <dependency>
+    <dependency>
       <groupId>javax.servlet</groupId>
       <artifactId>javax.servlet-api</artifactId>
     </dependency>
-    
+
     <!-- Apache Shiro -->
     <dependency>
       <groupId>org.apache.shiro</groupId>
