--- a/axelor-data/pom.xml
+++ b/axelor-data/pom.xml
@@ -5,7 +5,7 @@
     <artifactId>axelor-module-parent</artifactId>
     <groupId>com.axelor</groupId>
     <version>0.9.0-SNAPSHOT</version>
-    <relativePath>../axelor-module-parent/pom.xml</relativePath>
+    <relativePath>../../axelor-maven/axelor-module-parent/pom.xml</relativePath>
   </parent>
 
   <artifactId>axelor-data</artifactId>
@@ -13,6 +13,7 @@
 
   <dependencies>
 
+    <!-- runtime dependencies -->
     <dependency>
       <groupId>com.thoughtworks.xstream</groupId>
       <artifactId>xstream</artifactId>
@@ -27,24 +28,24 @@
       <version>1.26</version>
     </dependency>
     <dependency>
-       <groupId>commons-jxpath</groupId>
-       <artifactId>commons-jxpath</artifactId>
-       <version>1.3</version>
-	</dependency>
+      <groupId>commons-jxpath</groupId>
+      <artifactId>commons-jxpath</artifactId>
+      <version>1.3</version>
+    </dependency>
 
-	<!-- test dependencies -->
-	<dependency>
-		<groupId>com.axelor</groupId>
-		<artifactId>axelor-contact</artifactId>
-		<version>${project.version}</version>
-		<scope>test</scope>
-	</dependency>
-	<dependency>
-		<groupId>com.axelor</groupId>
-		<artifactId>axelor-sale</artifactId>
-		<version>${project.version}</version>
-		<scope>test</scope>
-	</dependency>
+    <!-- test dependencies -->
+    <dependency>
+      <groupId>com.axelor</groupId>
+      <artifactId>axelor-contact</artifactId>
+      <version>${project.version}</version>
+      <scope>test</scope>
+    </dependency>
+    <dependency>
+      <groupId>com.axelor</groupId>
+      <artifactId>axelor-sale</artifactId>
+      <version>${project.version}</version>
+      <scope>test</scope>
+    </dependency>
 
   </dependencies>
 
