--- a/axelor-tools/pom.xml
+++ b/axelor-tools/pom.xml
@@ -5,13 +5,13 @@
     <groupId>com.axelor</groupId>
     <artifactId>axelor-base-parent</artifactId>
     <version>0.9.0-SNAPSHOT</version>
-    <relativePath>../axelor-base-parent/pom.xml</relativePath>
+    <relativePath>../../axelor-maven/axelor-base-parent/pom.xml</relativePath>
   </parent>
 
   <modelVersion>4.0.0</modelVersion>
   <artifactId>axelor-tools</artifactId>
   <name>Axelor :: Tools</name>
-  
+
   <dependencies>
     <!-- Use Inflector from Jersey -->
     <dependency>
