--- a/axelor-web/pom.xml
+++ b/axelor-web/pom.xml
@@ -5,7 +5,7 @@
     <groupId>com.axelor</groupId>
     <artifactId>axelor-web-parent</artifactId>
     <version>0.9.0-SNAPSHOT</version>
-    <relativePath>../axelor-web-parent/pom.xml</relativePath>
+    <relativePath>../../axelor-maven/axelor-web-parent/pom.xml</relativePath>
   </parent>
 
   <modelVersion>4.0.0</modelVersion>
