--- a/axelor-wkf/pom.xml
+++ b/axelor-wkf/pom.xml
@@ -1,33 +1,33 @@
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
-	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
+  xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
 
-	<parent>
-		<groupId>com.axelor</groupId>
-		<artifactId>axelor-module-parent</artifactId>
-		<version>0.9.0-SNAPSHOT</version>
-		<relativePath>../axelor-module-parent/pom.xml</relativePath>
-	</parent>
+  <parent>
+    <groupId>com.axelor</groupId>
+    <artifactId>axelor-module-parent</artifactId>
+    <version>0.9.0-SNAPSHOT</version>
+    <relativePath>../../axelor-maven/axelor-module-parent/pom.xml</relativePath>
+  </parent>
 
-	<modelVersion>4.0.0</modelVersion>
-	<artifactId>axelor-wkf</artifactId>
-	<packaging>jar</packaging>
+  <modelVersion>4.0.0</modelVersion>
+  <artifactId>axelor-wkf</artifactId>
+  <packaging>jar</packaging>
 
-	<name>Axelor :: Wkf</name>
+  <name>Axelor :: Wkf</name>
 
-	<dependencies>
+  <dependencies>
 
-		<dependency>
-			<groupId>com.axelor</groupId>
-			<artifactId>axelor-meta</artifactId>
-			<version>${project.version}</version>
-		</dependency>
+    <dependency>
+      <groupId>com.axelor</groupId>
+      <artifactId>axelor-meta</artifactId>
+      <version>${project.version}</version>
+    </dependency>
 
-		<dependency>
-			<groupId>com.axelor</groupId>
-			<artifactId>axelor-auth</artifactId>
-			<version>${project.version}</version>
-		</dependency>
+    <dependency>
+      <groupId>com.axelor</groupId>
+      <artifactId>axelor-auth</artifactId>
+      <version>${project.version}</version>
+    </dependency>
 
-	</dependencies>
+  </dependencies>
 
 </project>
