--- a/axelor-tools/src/main/resources/templates/body.template
+++ b/axelor-tools/src/main/resources/templates/body.template
@@ -2,7 +2,7 @@ ${ pojo.documentation }\
 <% pojo.annotations.each { a -> %>
 ${a}\
 <% } %>
-public class ${pojo.name} extends ${pojo.baseClass} {
+public class ${pojo.name} extends ${pojo.baseClass}${pojo.implementStmt} {
 <% pojo.fields.each { p -> %>\
 <% p.annotations.each { a -> %>
 	${a}\
@@ -203,4 +203,5 @@ ${p.documentation}
 	public static Query<$pojo.name> filter(String filter, Object... params) {
 		return JPA.all(${pojo.name}.class).filter(filter, params);
 	}
+	${pojo.extraCode}
 }
