--- a/axelor-tools/pom.xml
+++ b/axelor-tools/pom.xml
@@ -3,9 +3,9 @@
 
   <parent>
     <groupId>com.axelor</groupId>
-    <artifactId>axelor-base-parent</artifactId>
+    <artifactId>axelor-groovy-parent</artifactId>
     <version>2.0.0-SNAPSHOT</version>
-    <relativePath>../../axelor-maven/axelor-base-parent/pom.xml</relativePath>
+    <relativePath>../../axelor-groovy-maven/axelor-parent/pom.xml</relativePath>
   </parent>
 
   <modelVersion>4.0.0</modelVersion>
