--- a/axelor-tools/src/test/resources/axelor-app/axelor-objects/pom.xml
+++ b/axelor-tools/src/test/resources/axelor-app/axelor-objects/pom.xml
@@ -3,7 +3,7 @@
 
   <parent>
     <groupId>com.axelor</groupId>
-    <artifactId>axelor-base-parent</artifactId>
+    <artifactId>axelor-module-parent</artifactId>
     <version>2.0.0-SNAPSHOT</version>
   </parent>
 
