--- a/axelor-core/src/test/resources/application.properties
+++ b/axelor-core/src/test/resources/application.properties
@@ -8,7 +8,7 @@
 # Application Information
 # ~~~~~
 application.name = Tests
-application.description = Web Tests
+application.description = Tests
 
 # Application Mode
 # ~~~~~
@@ -29,7 +29,7 @@ session.timeout = 60
 
 # Location of temp directory
 # ~~~~~
-temp.dir = /tmp
+temp.dir = {java.io.tmpdir}
 
 # Link to the online help
 # ~~~~~
