Integrated quartz scheduler (RM-1817)
The quartz scheduler has been integrated in core. The
jobs can be configured using configuration provided
from MetaScheduler domain object.

The configuration accepts cron strings and also allows
to provide additional params (key -> value pairs) to be
used by the job.

--- a/axelor-core/pom.xml
+++ b/axelor-core/pom.xml
@@ -110,6 +110,12 @@
       <groupId>org.apache.shiro</groupId>
       <artifactId>shiro-guice</artifactId>
     </dependency>
+    
+    <!-- Quartz Scheduler -->
+    <dependency>
+      <groupId>org.quartz-scheduler</groupId>
+      <artifactId>quartz</artifactId>
+    </dependency>
 
     <!-- CGLIB -->
     <dependency>
