Fixed postgres dependency.

--- a/axelor-core/pom.xml
+++ b/axelor-core/pom.xml
@@ -63,7 +63,7 @@
       <artifactId>hsqldb</artifactId>
     </dependency>
     <dependency>
-      <groupId>postgresql</groupId>
+      <groupId>org.postgresql</groupId>
       <artifactId>postgresql</artifactId>
     </dependency>
     <dependency>
