Implemented mail support.

--- a/axelor-core/pom.xml
+++ b/axelor-core/pom.xml
@@ -96,6 +96,21 @@
       <groupId>javax.servlet</groupId>
       <artifactId>javax.servlet-api</artifactId>
     </dependency>
+    
+    <!-- Java Mail -->
+    <dependency>
+      <groupId>javax.mail</groupId>
+      <artifactId>mail</artifactId>
+    </dependency>
+    <dependency>
+      <groupId>javax.mail</groupId>
+      <artifactId>javax.mail-api</artifactId>
+    </dependency>
+    <dependency>
+      <groupId>org.subethamail</groupId>
+      <artifactId>subethasmtp</artifactId>
+      <scope>test</scope>
+    </dependency>
 
     <!-- Apache Shiro -->
     <dependency>
