Implemented generic template support.
- generic template api
- implementation of groovy templates
- implementation of string template

--- a/axelor-core/pom.xml
+++ b/axelor-core/pom.xml
@@ -184,6 +184,12 @@
       <groupId>com.thoughtworks.xstream</groupId>
       <artifactId>xstream</artifactId>
     </dependency>
+    
+    <!-- StringTemplate -->
+    <dependency>
+      <groupId>org.antlr</groupId>
+      <artifactId>ST4</artifactId>
+    </dependency>
 
     <!-- OpenCSV -->
     <dependency>
