--- a/axelor-core/pom.xml
+++ b/axelor-core/pom.xml
@@ -144,6 +144,22 @@
       <artifactId>groovy-wslite</artifactId>
       <version>0.7.1</version>
     </dependency>
+    <!-- Groovy Template (64K fix) -->
+    <dependency>
+      <groupId>org.codehaus.groovy</groupId>
+      <artifactId>groovy-streaming-template-engine</artifactId>
+      <version>2.2.1.1</version>
+      <exclusions>
+        <exclusion>
+          <artifactId>groovy-templates</artifactId>
+          <groupId>org.codehaus.groovy</groupId>
+        </exclusion>
+        <exclusion>
+          <artifactId>groovy</artifactId>
+          <groupId>org.codehaus.groovy</groupId>
+        </exclusion>
+      </exclusions>
+    </dependency>
 
     <!-- ApacheDS -->
     <dependency>
