Added all_() method (RM-2052)

--- a/axelor-tools/src/main/resources/templates/body.template
+++ b/axelor-tools/src/main/resources/templates/body.template
@@ -186,12 +186,22 @@ ${p.documentation}
 	public static $pojo.name find(Long id) {
 		return JPA.find(${pojo.name}.class, id);
 	}
+	
+	/**
+	 * Return a {@link Query} instance for <code>$pojo.name</code> to filter
+	 * on all the records.
+	 *
+	 */
+	public static Query<? extends $pojo.name> all_() {
+		return JPA.all(${pojo.name}.class);
+	}
 <% if (!pojo.hasExtends) { %>
 	/**
 	 * Return a {@link Query} instance for <code>$pojo.name</code> to filter
 	 * on all the records.
 	 *
 	 */
+	@Deprecated
 	public static Query<$pojo.name> all() {
 		return JPA.all(${pojo.name}.class);
 	}
@@ -200,6 +210,7 @@ ${p.documentation}
 	 * A shortcut method to <code>${pojo.name}.all().filter(...)</code>
 	 *
 	 */
+	@Deprecated
 	public static Query<$pojo.name> filter(String filter, Object... params) {
 		return JPA.all(${pojo.name}.class).filter(filter, params);
 	}
