--- a/axelor-core/build.gradle
+++ b/axelor-core/build.gradle
@@ -7,6 +7,7 @@ module {
 
 dependencies {
 
+	testCompile project(":core:axelor-test")
 	compile project(":core:axelor-common")
 
 	compile libs.groovy
