Fixed source path issue.

--- a/axelor-gradle/build.gradle
+++ b/axelor-gradle/build.gradle
@@ -25,6 +25,6 @@ dependencies {
 sourceSets {
 	main {
 		java.srcDirs = []
-		groovy.srcDirs = ['src/main']
+		groovy.srcDirs = ['src/main/java', 'src/main/groovy']
 	}
 }
