--- a/axelor-gradle/build.gradle
+++ b/axelor-gradle/build.gradle
@@ -17,6 +17,8 @@ dependencies {
 	// TODO: replace inlfection used from jersey server with axelor-common
 	compile libs.jersey_server
 	compile project(':core:axelor-common')
+
+	compile 'org.gradle.api.plugins:gradle-tomcat-plugin:1.2.4'
 }
 
 sourceSets {
