--- a/axelor-common/build.gradle
+++ b/axelor-common/build.gradle
@@ -1,5 +1,6 @@
 apply plugin: "java"
 apply plugin: "eclipse"
+apply plugin: "eclipse-wtp"
 
 apply from: "../repo.gradle"
 apply from: "../libs.gradle"
