--- a/libs.gradle
+++ b/libs.gradle
@@ -65,6 +65,9 @@ ext {
 							 "org.apache.shiro:shiro-web:1.2.2",
 							 "org.apache.shiro:shiro-guice:1.2.2"],
 
+		// commons logging
+		commons_logging:	"commons-logging:commons-logging:1.1.3",
+
 		// Quartz Scheduler
 		quartz:				"org.quartz-scheduler:quartz:2.2.1",
 
