--- a/repo.gradle
+++ b/repo.gradle
@@ -1,16 +1,13 @@
-buildscript {
-	repositories {
-		jcenter()
-		mavenCentral()
-		mavenLocal()
-		maven {
-			name "axelor-nexus"
-			url	"http://repository.axelor.com/nexus/content/groups/public/"
-		}
+project.buildscript.repositories {
+	jcenter()
+	mavenCentral()
+	mavenLocal()
+	maven {
+		name "axelor-nexus"
+		url	"http://repository.axelor.com/nexus/content/groups/public/"
 	}
 }
-
-repositories {
+project.repositories {
 	jcenter()
 	mavenCentral()
 	mavenLocal()
