--- a/axelor-common/build.gradle
+++ b/axelor-common/build.gradle
@@ -4,6 +4,14 @@ apply plugin: "eclipse-wtp"
 
 apply from: "../repo.gradle"
 apply from: "../libs.gradle"
+apply from: "../license.gradle"
+
+buildscript {
+	apply from: "../repo.gradle"
+	dependencies {
+		classpath libs.plugin_license
+	}
+}
 
 sourceCompatibility = 1.7
 targetCompatibility = 1.7
