Upgrading to guava 17.0
Also exclude jsr305 from runtime.

--- a/axelor-common/build.gradle
+++ b/axelor-common/build.gradle
@@ -19,5 +19,10 @@ dependencies {
 	testCompile libs.junit
 
 	compile libs.guava
+	compile libs.jsr305
 	compile libs.axelor_cglib
+}
+
+configurations {
+	runtime.exclude module: "jsr305"
 }
