Implemented gradle build system for platform.
The common logic now moved to some init.d scripts
which are also included to the distribution package.

--- a/axelor-core/build.gradle
+++ b/axelor-core/build.gradle
@@ -7,8 +7,8 @@ module {
 
 dependencies {
 
-	testCompile project(":core:axelor-test")
-	compile project(":core:axelor-common")
+	testCompile project(":axelor-test")
+	compile project(":axelor-common")
 
 	compile libs.groovy
 
