--- a/axelor-test/build.gradle
+++ b/axelor-test/build.gradle
@@ -1,11 +1,4 @@
-apply plugin: "axelor-base"
-
-module {
-	name "axelor-test"
-	title "Axelor :: Test"
-}
-
-ext.useSrcGen = false
+apply plugin: "java"
 
 dependencies {
 
