Implemented some gradle commands.

--- a/axelor-shell/build.gradle
+++ b/axelor-shell/build.gradle
@@ -6,6 +6,7 @@ dependencies {
 
 	compile localGroovy()
 
+	compile libs.slf4j_simple
 	compile	libs.guava
 	compile libs.jline
 	compile libs.commons_cli
